<resources>
    <string name="app_name">ThinkingCAPP</string>

    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_confirm">Confirm Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_to_register">Don\'t have an account?</string>
    <string name="login_to_login">Back to login</string>

    <string name="login_invalid">Invalid username or password</string>
    <string name="login_error">Authentication failed</string>
    <string name="login_success">Logged in successfully</string>
    <string name="logout_success">Logged out successfully</string>

    <string name="register_error_email">Email taken</string>
    <string name="register_error_username">Username taken</string>
    <string name="register_error">Registration failed</string>
    <string name="register_success">Registration successful</string>

    <string name="sort_text">Sort:</string>
    <string-array name="sort_modes">
        <item>Top</item>
        <item>New</item>
    </string-array>
    <string name="filter">Filter…</string>
    <string name="votes">Votes</string>

    <string name="main_screen">Main Screen</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="filter_partially_answered">Show Partially Answered</string>
    <string name="filter_fully_answered">Show Fully Answered</string>
    <string name="filter_only_you">Show Your Questions Only</string>
    <string-array name="filter_tags">
        <item>meta</item>
        <item>math</item>
        <item>science</item>
        <item>english</item>
        <item>computing</item>
        <item>chinese</item>
    </string-array>

    <string name="question_input_title">Question title</string>
    <string name="question_input_desc">Describe your question in more detail here</string>
    <string name="question_input_file">Upload file</string>
    <string name="question_input_tags">Tags</string>

    <string name="answer_here">Answer here:</string>
    <string name="enable_markdown">Enable Markdown</string>
    <string name="enable_markdown_body">Enable Markdown (Body)</string>

    <string name="clarify_requested">Clarification requested by asker</string>
    <string name="clarify_dialog">Are you sure you want to request for clarification?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="question_added">Question added</string>
    <string name="answer_added">Answer added</string>
    <string name="load_data_error">Failed loading data</string>
    <string name="load_question_error">Failed loading question</string>

    <string name="desc_add_question">Add Question</string>
    <string name="desc_add_answer">Add Answer</string>
    <string name="desc_upvote">Upvote</string>
    <string name="desc_downvote">Downvote</string>

</resources>
