<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/partially_answered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_partially_answered"
            android:textSize="16sp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/fully_answered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/filter_fully_answered"
            android:textSize="16sp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/only_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/filter_only_you"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

    </LinearLayout>
</layout>